--- a/themes/hugoplate/layouts/partials/essentials/footer.html
+++ b/themes/hugoplate/layouts/partials/essentials/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-theme-light dark:bg-darkmode-theme-light">
-  <div class="container">
+  <div class="container px-11">
     <div class="row items-center py-10">
       <div class="lg:col-3 mb-8 text-center lg:mb-0 lg:text-left">
         <!-- navbar brand/logo -->
