--- a/themes/hugoplate/layouts/blog/list.html
+++ b/themes/hugoplate/layouts/blog/list.html
@@ -3,7 +3,7 @@
 
 
   <section class="section">
-    <div class="container">
+    <div class="container max-w-[95%] mx-auto">
       <div class="row gx-5">
         <!-- blog posts -->
         <div class="lg:col-8">
