--- a/themes/hugoplate/layouts/partials/components/author-card.html
+++ b/themes/hugoplate/layouts/partials/components/author-card.html
@@ -1,11 +1,11 @@
 <div
-  class="bg-theme-light dark:bg-darkmode-theme-light rounded p-8 text-center">
+  class="bg-theme-light dark:bg-darkmode-theme-light p-8 text-center">
   {{ $image:= .Params.image }}
   {{ if $image }}
-    {{ partial "image" (dict "Src" $image "Context" .Page "Alt" .Title "Class" "mx-auto mb-6 rounded" "size" "120x120") }}
+    {{ partial "image" (dict "Src" $image "Context" .Page "Alt" .Title "Class" "mx-auto mb-6" "size" "120x120") }}
   {{ else if .Params.Email }}
     <img
-      class="mx-auto mb-6 rounded"
+      class="mx-auto mb-6"
       alt="{{ .Title }}"
       height="120"
       width="120"
