--- a/themes/hugoplate/layouts/partials/components/pagination.html
+++ b/themes/hugoplate/layouts/partials/components/pagination.html
@@ -15,7 +15,7 @@
     <!-- Previous page. -->
     {{ if $paginator.HasPrev }}
       <a
-        class="text-dark hover:bg-theme-light dark:text-darkmode-dark dark:hover:bg-darkmode-theme-light rounded px-2 py-1.5"
+        class="text-dark hover:bg-theme-light dark:text-darkmode-dark dark:hover:bg-darkmode-theme-light px-2 py-1.5"
         href="{{ $paginator.Prev.URL }}"
         aria-label="Pagination Arrow">
         <span class="sr-only">Previous</span>
@@ -32,7 +32,7 @@
         </svg>
       </a>
     {{ else }}
-      <span class="text-light rounded px-2 py-1.5">
+      <span class="text-light px-2 py-1.5">
         <span class="sr-only">Previous</span>
         <svg
           viewBox="0 0 20 20"
