--- a/themes/hugoplate/layouts/partials/components/pagination.html
+++ b/themes/hugoplate/layouts/partials/components/pagination.html
@@ -10,7 +10,7 @@
 <!-- If there's more than one page. -->
 {{ if gt $paginator.TotalPages 1 }}
   <nav
-    class="flex items-center justify-center space-x-3"
+    class="flex artech-pagination items-center justify-center space-x-3"
     aria-label="Pagination">
     <!-- Previous page. -->
     {{ if $paginator.HasPrev }}
