--- a/css/style.css
+++ b/css/style.css
@@ -1870,6 +1870,9 @@ input#nav-toggle:checked ~ #nav-menu {
   white-space: nowrap;
   border-width: 0;
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
@@ -1890,6 +1893,9 @@ input#nav-toggle:checked ~ #nav-menu {
 }
 .z-30 {
   z-index: 30;
+}
+.z-50 {
+  z-index: 50;
 }
 .order-1 {
   order: 1;
@@ -2000,6 +2006,9 @@ input#nav-toggle:checked ~ #nav-menu {
 .h-6 {
   height: 1.5rem;
 }
+.w-\[30px\] {
+  width: 30px;
+}
 .w-full {
   width: 100%;
 }
@@ -2064,6 +2073,10 @@ input#nav-toggle:checked ~ #nav-menu {
 .bg-body {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .bg-primary {
   --tw-bg-opacity: 1;
@@ -2145,6 +2158,10 @@ input#nav-toggle:checked ~ #nav-menu {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
+.py-\[2\.5px\] {
+  padding-top: 2.5px;
+  padding-bottom: 2.5px;
+}
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -2178,6 +2195,9 @@ input#nav-toggle:checked ~ #nav-menu {
 .font-primary {
   font-family: Heebo, sans-serif;
 }
+.text-\[12px\] {
+  font-size: 12px;
+}
 .text-\[8rem\] {
   font-size: 8rem;
 }
@@ -2198,8 +2218,15 @@ input#nav-toggle:checked ~ #nav-menu {
 .font-semibold {
   font-weight: 600;
 }
+.uppercase {
+  text-transform: uppercase;
+}
 .capitalize {
   text-transform: capitalize;
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .text-dark {
   --tw-text-opacity: 1;
@@ -3407,6 +3434,22 @@ input#nav-toggle:checked ~ #nav-menu {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+@media (min-width: 540px) {
+
+  .sm\:block {
+    display: block;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:bg-red-200 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+  }
+}
+
 @media (min-width: 768px) {
 
   .md\:order-1 {
@@ -3415,6 +3458,19 @@ input#nav-toggle:checked ~ #nav-menu {
 
   .md\:order-2 {
     order: 2;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:bg-yellow-200 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(254 240 138 / var(--tw-bg-opacity));
   }
 }
 
@@ -3434,6 +3490,10 @@ input#nav-toggle:checked ~ #nav-menu {
 
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:block {
+    display: block;
   }
 
   .lg\:inline-block {
@@ -3462,6 +3522,11 @@ input#nav-toggle:checked ~ #nav-menu {
     margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .lg\:bg-green-200 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+  }
+
   .lg\:pb-0 {
     padding-bottom: 0px;
   }
@@ -3481,9 +3546,38 @@ input#nav-toggle:checked ~ #nav-menu {
 
 @media (min-width: 1280px) {
 
+  .xl\:block {
+    display: block;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+
   .xl\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(2rem * var(--tw-space-x-reverse));
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .xl\:bg-blue-200 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+  }
+}
+
+@media (min-width: 1536px) {
+
+  .\32xl\:block {
+    display: block;
+  }
+
+  .\32xl\:hidden {
+    display: none;
+  }
+
+  .\32xl\:bg-pink-200 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(251 207 232 / var(--tw-bg-opacity));
   }
 }
